feat: add valve sensitivity
